entity class looks good

--- a/aieBootstrap-master/project3D/Project3D.vcxproj.filters
+++ b/aieBootstrap-master/project3D/Project3D.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="tiny_obj_loader.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -50,10 +47,10 @@
     <ClInclude Include="tiny_obj_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Object.h">
+    <ClInclude Include="Entity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Entity.h">
+    <ClInclude Include="MainHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
