--- a/aieBootstrap-master/project3D/Project3D.vcxproj
+++ b/aieBootstrap-master/project3D/Project3D.vcxproj
@@ -94,7 +94,6 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FlyCam.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Object.cpp" />
     <ClCompile Include="tiny_obj_loader.cc" />
   </ItemGroup>
   <ItemGroup>
@@ -102,7 +101,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FlyCam.h" />
-    <ClInclude Include="Object.h" />
+    <ClInclude Include="MainHeader.h" />
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
