--- a/aieBootstrap-master/project3D/Project3D.vcxproj
+++ b/aieBootstrap-master/project3D/Project3D.vcxproj
@@ -93,8 +93,10 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FlyCam.cpp" />
+    <ClCompile Include="GPUParticleEmitter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ParticleEmitter.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="tiny_obj_loader.cc" />
   </ItemGroup>
   <ItemGroup>
@@ -102,8 +104,10 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FlyCam.h" />
+    <ClInclude Include="GPUParticleEmitter.h" />
     <ClInclude Include="MainHeader.h" />
     <ClInclude Include="ParticleEmitter.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
